; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netinet/extr_ip_divert.c_div_detach.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netinet/extr_ip_divert.c_div_detach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.socket = type { i32 }
%struct.inpcb = type { i32 }

@.str = private unnamed_addr constant [24 x i8] c"div_detach: inp == NULL\00", align 1
@V_divcbinfo = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.socket*)* @div_detach to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @div_detach(%struct.socket* %0) #0 {
  %2 = alloca %struct.socket*, align 8
  %3 = alloca %struct.inpcb*, align 8
  store %struct.socket* %0, %struct.socket** %2, align 8
  %4 = load %struct.socket*, %struct.socket** %2, align 8
  %5 = call %struct.inpcb* @sotoinpcb(%struct.socket* %4)
  store %struct.inpcb* %5, %struct.inpcb** %3, align 8
  %6 = load %struct.inpcb*, %struct.inpcb** %3, align 8
  %7 = icmp ne %struct.inpcb* %6, null
  %8 = zext i1 %7 to i32
  %9 = call i32 @KASSERT(i32 %8, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0))
  %10 = call i32 @INP_INFO_WLOCK(i32* @V_divcbinfo)
  %11 = load %struct.inpcb*, %struct.inpcb** %3, align 8
  %12 = call i32 @INP_WLOCK(%struct.inpcb* %11)
  %13 = load %struct.inpcb*, %struct.inpcb** %3, align 8
  %14 = call i32 @in_pcbdetach(%struct.inpcb* %13)
  %15 = load %struct.inpcb*, %struct.inpcb** %3, align 8
  %16 = call i32 @in_pcbfree(%struct.inpcb* %15)
  %17 = call i32 @INP_INFO_WUNLOCK(i32* @V_divcbinfo)
  ret void
}

declare dso_local %struct.inpcb* @sotoinpcb(%struct.socket*) #1

declare dso_local i32 @KASSERT(i32, i8*) #1

declare dso_local i32 @INP_INFO_WLOCK(i32*) #1

declare dso_local i32 @INP_WLOCK(%struct.inpcb*) #1

declare dso_local i32 @in_pcbdetach(%struct.inpcb*) #1

declare dso_local i32 @in_pcbfree(%struct.inpcb*) #1

declare dso_local i32 @INP_INFO_WUNLOCK(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
